--- a/opdracht-1/index.html
+++ b/opdracht-1/index.html
@@ -6,8 +6,25 @@
     <title>Positioneren - Opdracht 1</title>
 </head>
 <body>
+
     <article class="recipe-card">
-        <!--    Plaats hier alle elementen-->
+        <img src="assets/pastasalade-met-gerookte-kip.webp" alt="foto van pastasalade" id="image-pastasalade">
+        <img src="assets/favorite.svg" alt="favoriet-symbool" id="image-favorite">
+        <div class="recipe-details">
+        <span class="recipe-details-items">
+            <img src="assets/time.svg" alt="tijd-symbool" class="symbol">
+            20 min
+        </span>
+        <span class="recipe-details-items">
+            <img src="assets/fire.svg" alt="vuur-symbool" class="symbol">
+            510 kcal
+        </span>
+        <span class="recipe-details-items">
+            <img src="assets/star.svg" alt="ster-symbool" class="symbol">
+            4
+        </span>
+        </div>
+        <h1>Pastasalade met gerookte kip</h1>
     </article>
 </body>
 </html>
