--- a/opdracht-2/index.html
+++ b/opdracht-2/index.html
@@ -7,7 +7,27 @@
 </head>
 <body>
     <article class="product">
-        <!--    Plaats hier alle elementen-->
+        <div class="product-image-wrapper">
+            <img class="favorite-symbol" src="assets/favorite.svg" alt="favorite symbol">
+            <span class="new-sticker">
+            New
+            </span>
+            <img class="product-photo" src="assets/model-in-pink-blazer.jpg" alt="model in pink blazer">
+        </div>
+
+        <div class="product-information">
+            <p class="conscious">Conscious choice</p>
+            <h2>Oversized single-breasted blazer</h2>
+            <div class="dot-colors">
+                <span class="product-color-dot dot-pink"></span>
+                <span class="product-color-dot dot-black"></span>
+                <span class="product-color-dot dot-taupe"></span>
+                <span class="product-color-dot dot-beige"></span>
+                </div>
+            <p class="price">€39,99</p>
+
+        </div>
     </article>
 </body>
 </html>
+
